# dth-character-studio

./: .gitattributes  .gitignore  .npmrc  .oxlintrc.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.ai/: README.md  architecture.md  conventions.md  domain.md  gotchas.md  release.md  testing.md
.changeset/: README.md  about-page.md  accepted-conflicts-merge.md  actions-scroll-inactive-timeline.md  add-button-match-card-height.md  ai-branch-tracking.md  aligned-back-nav.md  alt-menu-guard.md  app-data-folder.md  app-data-tab.md  app-menu-avatar-tools.md  app-styled-confirm.md  architecture-hardening.md  asset-card-accent-bar.md  audit-remediation-fixes.md  audit-rom-core.md  audit-round-three.md  audit-round-two.md  audit-rust-hardening.md  audit-tail-closeout.md  audit-web-persistence.md  auto-select-figure.md  avatar-crop-square.md  avatar-portrait-softer-overscan.md  avatar-scene-sync.md  avatar-upscale-768.md  avatar-xbrz-upscale.md  back-gray-and-card-shift-icons.md  base-rom-tail-leak.md  bone-scale-no-export-dir.md  bone-scale-reference-toggle.md  brave-doors-report.md  bump-runtime-open-scene.md  bumpy-bats-invent.md  bundle-runtime.md  bundled-scan-frames.md  busy-cursor.md  cached-pose-catalog.md  card-logo-badges.md  character-and-project-forms.md  (+294 more)
.claude/commands/: grill.md  verify.md  write-pr.md
.claude/skills/dep-release/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pages.yml  release-housekeeping.yml  release.yml  runner-selfcheck.yml  sign-smoketest.yml  site-preview.yml  validate-pull-request.yml  version.yml
apps/desktop/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs  electron-builder.yml  electron.vite.config.ts  package.json  tauri.conf.json  tsconfig.json  windows-app-manifest.xml
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: archive.rs  assets.rs  avatar.rs  content.rs  contract_tests.rs  daz.rs  dedup.rs  drives.rs  foreground.rs  fsutil.rs  github.rs  housekeeping.rs  install.rs  lib.rs  main.rs  poses.rs  report.rs  scripts.rs  testutil.rs  uninstall.rs  windows.rs
apps/desktop/src/main/: index.ts
apps/desktop/src/preload/: index.ts
apps/web/: .cta.json  CHANGELOG.md  index.html  package.json  playwright.clips.config.ts  playwright.config.ts  playwright.gifs.config.ts  playwright.screenshots.config.ts  tsconfig.json  vite.config.ts
apps/web/docs/: poseasset-csv-spec.md
apps/web/public/: manifest.json
apps/web/scripts/: bundle-server.mjs
apps/web/server/: index.js  serve-app.js  standalone.js
apps/web/smoke/: fixtures.ts  gif-recorder.ts  gifenc.d.ts  guide.clips.ts  guide.gifs.ts  guide.screenshots.ts  kira-fbm.json  kira-products.csv  override-dot-bob.smoke.ts  override-no-shift.smoke.ts  override-reset-keyboard.smoke.ts  override.smoke.ts  preserve-morph-autocomplete.smoke.ts  scene-footer.smoke.ts  sticky-override-bar.smoke.ts  sticky-panel-title.smoke.ts  studio.smoke.ts  tab-history.smoke.ts  tauri-mock.ts  webp-recorder.ts
apps/web/src/: desktop.d.ts  dsa-raw.d.ts  main.tsx  routeTree.gen.ts  router.tsx  styles.css
apps/web/src/components/: asset-form.tsx  assets-grid.tsx  avatar.tsx  bulk-delete-dialog.tsx  character-products-tab.tsx  clone-character-dialog.tsx  config-error.tsx  csv-import-dialog.tsx  daz-scene-field.tsx  dir-path-chip.tsx  editable-title.tsx  field.tsx  file-drop-zone.tsx  folder-move-chip.tsx  form-header.tsx  guide-link.tsx  header-nav.tsx  houdini-projects-field.tsx  image-crop-editor.tsx  image-dialog.test.tsx  image-dialog.tsx  install-controls.test.tsx  install-controls.tsx  jcm-mods-editor.tsx  notes-editor.test.tsx  notes-editor.tsx  number-field.tsx  overview-controls.tsx  path-code.test.tsx  path-code.tsx  portrait.tsx  project-dialogs.tsx  release-notes.tsx  remove-asset-dialog.tsx  rom-sections.test.tsx  rom-sections.tsx  scan-csv-picker-dialog.tsx  scene-copy-dialog.tsx  storage-location.tsx  tag.tsx  (+4 more)
apps/web/src/components/character/: delete-character-section.tsx  editor-header.tsx  export-settings-section.tsx  groom-fields.tsx  groom-kind.test.ts  groom-kind.tsx  identity-section.tsx  panel-override-toggle.tsx  preserve-fields.test.tsx  preserve-fields.tsx  rom-editor-section.tsx  rom-run-log-report.tsx  scene-footer.tsx  scene-label.tsx  scene-tabs-row.tsx  scripts-section.tsx  (+1 more)
apps/web/src/lib/: alt-menu-guard.ts  busy-cursor.ts  character-paths.ts  desktop.ts  file-drop.ts  image-crop.test.ts  image-crop.ts  path.ts  scene-name.ts  update-prompt.ts  updater.ts  use-character-draft.test.tsx  use-character-draft.ts  use-confirm.tsx  use-folder-move.tsx  use-modifier-held.ts  use-persistent-state.ts  use-rom-run-log.ts  use-scene-selection.ts  use-selection.ts  use-settings-actions.ts  use-unsaved-guard.ts
apps/web/src/routes/: __root.tsx  about.tsx  api.character-images.$fileName.ts  characters.$id.tsx  index.tsx  projects.$projectId.characters.$characterId.tsx  projects.$projectId.index.tsx  settings.tsx  tools.tsx
apps/web/src/server/: paths.ts
brand/: README.md
contracts/: dedup-report.json  install-report.json  pose-asset-frames.json  remap-results.json  scene-wearables.json  sweep-report.json
docs/: audit-followups.md  development.md  devops.md  release-checklist.md  tauri-migration.md
docs/guide/: 01-installation.md  02-setup.md  03-first-project.md  04-first-character.md  05-rom-in-daz.md  06-into-houdini.md  README.md  advanced.md  attachments.md  character-page.md  daz-assets.md  product-scanning.md  scenes.md  tools.md
scripts/: build-guide-site.mjs  dedupe-changelogs.mjs  release-notes.mjs
site/: guide.css  guide.js  index.html  main.js  styles.css
src/: routeTree.gen.ts
src/components/: rom-sections.tsx
src/lib/rom/: api.ts  storage.ts
src/lib/rom/templates/: poseasset-g9-dqs-jcmfac-gp-ue5.csv
src/routes/: __root.tsx  api.character-images.$fileName.ts  characters.$id.tsx  index.tsx  settings.tsx
(+98 files in other folders)
