[package]
name = "dth-character-studio"
version = "0.1.0"
description = "DTH Character Studio"
authors = ["Polynaut"]
edition = "2021"

# The library the desktop and (future) mobile entry points share.
[lib]
name = "dth_character_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Desktop-only plugins (updater + relaunch).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
