[package]
name = "dth-character-studio"
version = "0.1.0"
description = "DTH Character Studio"
authors = ["Polynaut"]
edition = "2021"

# The library the desktop and (future) mobile entry points share.
[lib]
name = "dth_character_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# NOTE: Cargo.lock pins alloc-stdlib = 0.2.2 and alloc-no-stdlib = 2.0.4.
# alloc-no-stdlib 3.0.0 (published 2026-06-14) creates a duplicate version in the
# tree that breaks brotli 8.0.3 (used by tauri's default `compression` feature)
# with E0277 Allocator-coherence errors — see tauri-apps/tauri#15540/#15541 and
# dropbox/rust-brotli#256. The pins resolve it (`cargo update -p alloc-stdlib
# --precise 0.2.2 -p alloc-no-stdlib --precise 2.0.4`). Don't `cargo update` those
# back to latest until brotli/alloc-stdlib ship a compatible release.
[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pose-asset .duf files are JSON, sometimes gzip-compressed — flate2 1.1.9 is
# already in the tree (transitive), so this adds no new version.
flate2 = "1"

# Desktop-only plugins (updater + relaunch).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Windows-only: resolving / re-mapping network drives via the WNet API. 0.59 is
# already in the tree (via tauri), so this pulls in no new windows-sys version.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_WNet",
] }
