[package]
name = "dth-character-studio"
version = "0.1.0"
description = "DTH Character Studio"
authors = ["Polynaut"]
edition = "2021"

# The library the desktop and (future) mobile entry points share.
[lib]
name = "dth_character_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# NOTE: Cargo.lock pins alloc-stdlib = 0.2.2 and alloc-no-stdlib = 2.0.4.
# alloc-no-stdlib 3.0.0 (published 2026-06-14) creates a duplicate version in the
# tree that breaks brotli 8.0.3 (used by tauri's default `compression` feature)
# with E0277 Allocator-coherence errors — see tauri-apps/tauri#15540/#15541 and
# dropbox/rust-brotli#256. The pins resolve it (`cargo update -p alloc-stdlib
# --precise 0.2.2 -p alloc-no-stdlib --precise 2.0.4`). Don't `cargo update` those
# back to latest until brotli/alloc-stdlib ship a compatible release.
[dependencies]
# `devtools`: keep the WebView2 inspector (right-click → Inspect, F12) available in
# release/installed builds too, not just dev — this is a self-hosted tool and the
# author wants to debug the shipped app against a live Daz Studio.
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pose-asset .duf files are JSON, sometimes gzip-compressed — flate2 1.1.9 is
# already in the tree (transitive), so this adds no new version.
flate2 = "1"
# Extracting zipped Daz assets (Optional tab installs). deflate-only (via flate2,
# already in tree) — no bzip2/zstd/aes backends, so no heavy/native deps and it
# leaves the alloc-stdlib/brotli pins above untouched.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Parallelize the per-asset Optional-tab scan/install (independent I/O-bound
# folder walks + zip central-directory reads).
rayon = "1"

# Desktop-only plugins (updater + relaunch + single-instance).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# One OS process, many windows: a second launch (e.g. double-clicking another
# `.dcsp`) is routed into the running app, which opens it in its own window.
tauri-plugin-single-instance = "2"
# Server-side download of the soltude/DazToHue-Scripts repo zip (Tools installer) —
# the webview can't fetch it (codeload's CORS only allows render.githubusercontent.com),
# but Rust has no CORS. reqwest 0.13 is ALREADY in the tree via tauri-plugin-updater
# (built with its rustls stack — see Cargo.lock: hyper-rustls/tokio-rustls/ring). We
# request NO features here: Cargo unifies features for the same crate version in the
# same target, so this reqwest builds with the updater's already-enabled rustls and
# HTTPS works — pulling in NO new HTTP/TLS crates and leaving the brotli/alloc-stdlib
# pins above untouched. Desktop-only, like the updater.
reqwest = { version = "0.13", default-features = false }
# The unified reqwest build only has rustls' `no-provider` variant (the updater
# configures its own client, leaving NO process-default crypto provider), so a plain
# `reqwest::get` panics. We install ring's provider as the default ourselves before
# downloading. rustls 0.23 + ring is already in the lock — `ring` only, no defaults,
# so this adds no crates (and avoids pulling aws-lc-rs).
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Windows-only: resolving / re-mapping network drives via the WNet API. 0.59 is
# already in the tree (via tauri), so this pulls in no new windows-sys version.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_WNet",
  # Focusing another app's window after "Open in …" (see foreground.rs).
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
] }
